syntax = "proto3";

package kardash.project.proto.transport;

service FileTransferService {
  rpc sendFile(stream FileChunk) returns (TransferStatus);
}

service PairingService {
  rpc pairingRequest(PairingRequest) returns (PairingResponse);
}

message FileChunk {
  bytes content = 1;
  string filename = 2;
}

message TransferStatus {
  bool success = 1;
  string message = 2;
}

message PairingRequest {
  string PCName = 1;
  string PCAddress = 2;
  string fileName = 3;
  string fileSize = 4;
}

message PairingResponse {
  bool response = 1;
}

service CancelService {
  rpc cancel (CancelRequest) returns (CancelResponse);
}
message CancelRequest {}
message CancelResponse {}